[package]
name = "alt_invalid_win_char"
version = "0.2.0"
authors = ["SyuJyo <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "invalid_win_char"
path = "src/lib.rs"

[[bin]]
name = "alt_invalid_win_char"
path = "src/main.rs"

[dependencies]
